fix JS and wrap in done function, in main navigation give display flex and fix search form submit

--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -130,6 +130,7 @@ a {
 	}
 }
 .main-navigation{
+	display: flex;
 	.nav-menu{
 	width: 400px;
 	justify-content: space-between;
